--- a/index.html
+++ b/index.html
@@ -1,110 +1,107 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>유한양행</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>유한양행</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="top"><!--top-->
-        <div class="top_inner">
-            <ul class="left">
-                <li class="bg1 line"><a href="#">일반고객</a></li>
-                <li class="bg1"><a href="#">기업고객</a></li>
-                <li class="bg2 line"><a href="#">인재채용</a></li>
-                <li class="bg2"><a href="#">고객센터</a></li>
-            </ul>
-            <ul class="right">
-                <li><a href="#">contact us</a></li>
-                <li><a href="#">sitemap</a></li>
-                <li><a href="#">english</a></li>
-            </ul>
-        </div>
-    </div><!--top-->
+  <div id="top">
+    <div class="top_inner">
+      <ul class="left">
+        <li class="bg1 line"><a href="#">일반고객</a></li>
+        <li class="bg1"><a href="#">기업고객</a></li>
+        <li class="bg2 line"><a href="#">인재채용</a></li>
+        <li class="bg2"><a href="#">고객센터</a></li>
+      </ul>
+      <ul class="right">
+        <li><a href="#">CUNTACT US</a></li>
+        <li><a href="#">SITEMAP</a></li>
+        <li><a href="#">ENGLISH</a></li>
+      </ul>
+    </div>
+  </div><!--top-->
 
-    <div id="header"><!--header-->
-        <div class="header_inner">
-            <h1><a href="#"><img src="images/logo.gif" alt="유한양행 로고"></a></h1>
-            <ul class="nav">
-                <li><a href="#">유한소개</a>
-                    <ul class="sub">
-                        <li><a href="#">서브메뉴1</a></li>
-                        <li><a href="#">서브메뉴2</a></li>
-                        <li><a href="#">서브메뉴3</a></li>
-                    </ul>
-                </li>
-                <li><a href="#">제품정보</a></li>
-                <li><a href="#">연구개발</a></li>
-                <li><a href="#">투자정보</a></li>
-                <li><a href="#">사회공헌</a></li>
-            </ul>
-        </div>
+  <div id="header">
+    <div class="header_inner">
+      <h1><a href="#"><img src="images/logo.gif" alt="유한양행로고"></a></h1>
+      <ul class="nav">
+        <li><a href="#">유한소개</a></li>
+        <li><a href="#">제품정보</a></li>
+        <li><a href="#">연구개발</a></li>
+        <li><a href="#">투자정보</a></li>
+        <li><a href="#">사회공헌</a></li>
+      </ul>
     </div><!--header-->
-
-    <div id="content"><!--content-->
-       <div class="lnb"><!--lnb-->
-        <h3>유한소개</h3>
-        <ul>
-            <li><a href="#" class="on">회사개요</a></li>
-            <li><a href="#">CEO 메세지</a></li>
-            <li><a href="#">회사연혁</a></li>
-            <li><a href="#">기업이념</a></li>
-            <li><a href="#">오시는 길</a></li>
-        </ul>
-       </div><!--lnb-->
-
-       <div class="content">
-           <h2>회사개요</h2>
-           <img src="images/img_company.gif" alt="회사건물 사진" class="company">
-           <div class="text">
-               <p><img src="images/slogan.gif" alt="모두의 건강과 행복이라는 큰 꿈을 가진 버드나무는 지금도 국민과 함께 자라고 있습니다."></p>
-               <p>"가장 좋은 상품을 만들어 국가와 동포에게 도움을 주자"라는 창업자 유일한 박사의 정신으로 1926년 유한양행은 설립되었습니다.</p>
-               <p>유한양행은 창업이래 지금까지 신뢰와 정직의 기업문화를 가지고 우수한 의약품 생산과 국민보건 향상에 매진해 왔습니다. 국내 1등 제약사, 국내 대표 장수기업 등 외형적 성장뿐만 아니라 한국에서 가장 존경받는 기업 등 사회공헌 대표기업으로 자리매김하고 있습니다.</p>
-               <p>또한 유한양행은 국민보건 향상과 직결되는 의약품뿐만 아니라 건강기능식품, 생활용품, 동물약품, 화장품 등 인류의 건강과 삶의 질을 높일 수 있는 다양한 사업에 진출하며 미래의 지속성장을 위해 노력하고 있습니다. 그리고 끊임없는 연구개발을 통해 혁신적 신약개발로 글로벌 시장 진출에 박차를 가하고 있습니다.</p>
-               <p>국내 1등을 넘어 글로벌 제약사로의 길, <br>
-                인류 건강을 위한 그 길을 유한양행은 큰 꿈을 갖고 걸어가려 합니다.</p>
-                <table>
-                    <tr>
-                        <th>기업명</th>
-                        <td>(주)유한양행</td>
-                        <th>설립</th>
-                        <td>1926.06.20</td>
-                    </tr>
-                    <tr>
-                        <th>대표이사</th>
-                        <td>사장 이정희</td>
-                        <th>상장일</th>
-                        <td>1962.11.01</td>
-                    </tr>
-                    <tr>
-                        <th>주소</th>
-                        <td colspan="3">서울특별시 동작구 노량진로 74</td>
-                    </tr>
-                    <tr>
-                        <th>전화번호</th>
-                        <td colspan="3">02-828-0181</td>
-                    </tr>
-                </table>
-           </div>
-       </div>
-    </div><!--content-->
-
-    <div id="footer"><!--footer-->
-        <div class="footer_inner">
-            <ul>
-                <li><a href="#">사이트이용약관</a></li>
-                <li><a href="#">개인정보처리방침</a></li>
-                <li><a href="#">이메일무단수집거부</a></li>
-                <li><a href="#">사이트이용안내</a></li>
-            </ul>
-            <p>
-                서울특별시 동작구 노량진로 74 (주)유한양행 / 문의전화 : 02)828-0050<br>
-                대표자 : 이정희 / 사업자등록번호 : 118-81-00601<br>
-                CopyrightⓒYuhan. All Rights Reserved.
-            </p>
-        </div>
-    </div><!--footer-->
+  </div><!--header_inner-->
+  <div class="content">
+    <div class="c_left">
+      <h2>유한소개</h2>
+      <ul class="lnb">
+        <li><a href="#">CEO 메세지</a></li>
+        <li><a href="#">회사연혁</a></li>
+        <li><a href="#">기업이념</a></li>
+        <li><a href="#">오시는 길</a></li>
+      </ul>
+    </div><!--left-->
+    <div class="c_right">
+      <h2>회사개요</h2>
+      <div class="img"><img src="images/img_company.gif" alt="회사개요"></div>
+      <div class="txt">
+        <img src="images/slogan.gif" alt="슬로건">
+        <p>
+          "가장 좋은 상품을 만들어 국가와 동포에게 도움을 주자"라는 창업자 유일한 박사의 정신으로 1926년 유한양행은 설립되었습니다.
+        </p>
+        <p>
+          유한양행은 창업이래 지금까지 신뢰와 정직의 기업문화를 가지고 우수한 의약품 생산과 국민보건 향상에 매진해 왔습니다. 국내 1등 제약사, 국내 대표 장수기업 등 외형적 성장뿐만 아니라 한국에서 가장 존경받는 기업 등 사회공헌 대표기업으로 자리매김하고 있습니다.
+        </p> 
+        <p>
+          또한 유한양행은 국민보건 향상과 직결되는 의약품뿐만 아니라 건강기능식품, 생활용품, 동물약품, 화장품 등 인류의 건강과 삶의 질을 높일 수 있는 다양한 사업에 진출하며 미래의 지속성장을 위해 노력하고 있습니다. 그리고 끊임없는 연구개발을 통해 혁신적 신약개발로 글로벌 시장 진출에 박차를 가하고 있습니다.
+        </p>
+          국내 1등을 넘어 글로벌 제약사로의 길, <br>
+          인류 건강을 위한 그 길을 유한양행은 큰 꿈을 갖고 걸어가려 합니다
+        </p>
+        <table border="0" cellspacing="0" cellpadding="3">
+          <tr>
+            <th>기업명</th>
+            <td>㈜유한양행</td>
+            <th>설립</th>
+            <td>1926.06.20</td>
+          </tr>
+          <tr>
+            <th>대표이사</th>
+            <td>사장 이정희</td>
+            <th>상장일</th>
+            <td>1962.11.01</td>
+          </tr>
+          <tr>
+            <th>주소</th>
+            <td colspan="3">서울특별시 동작구 노량진로 74</td>
+          </tr>
+          <tr>
+            <th>전화번호</th>
+            <td colspan="3">02-828-0181</td>
+          </tr>
+        </table>
+      </div>
+    </div><!--right-->
+  </div> <!--content-->
+  <div class="footer">
+    <div class="footer_inner">
+      <ul>
+        <li><a href="#">사이트이용약관</a></li>
+        <li><a href="#">개인정보처리방침</a></li>
+        <li><a href="#">이메일무단수집거부</a></li>
+        <li><a href="#">사이트이용안내</a></li>
+      </ul>
+      <div class="f_txt">
+      <p>서울특별시 동작구 노량진로 74 (주)유한양행 / 문의전화 : 02)828-0050</p>
+      <p>대표자 : 이정희 / 사업자등록번호 : 118-81-00601</p>
+      <p>CopyrightⓒYuhan. All Rights Reserved.</p>
+      </div>
+    </div>
+  </div> <!--footer-->
 </body>
 </html>
