--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </div><!--aboutus-->
         <div class="new">
           <div class="new_inner">
-            <h2><a href="#none">Recommend Product</a></h2>
+            <h2><a href="https://k1minseong.github.io/hisoap_sub2/">Recommend Product</a></h2>
             <div class="soap">
               <h3>브리티쉬 플라워</h3>
               <p>4,500원</p>
@@ -112,7 +112,7 @@
         </div><!--new-->
         <div class="main_slide">
           <div class="box">
-            <div class="slise_text"><a href="#none">
+            <div class="slise_text"><a href="https://k1minseong.github.io/hisoap_sub2/">
               <div class="inbox">
                 <h2>New Product</h2>
                 <p class="brown">
@@ -143,17 +143,17 @@
           <div class="factorybox">
             <div class="box1 fb" data-aos="fade-up" data-aos-duration="1000">
               <h4>Make your own soap</h4>
-              <p><a href="#none">나만의 비누 만들기</a></p>
+              <p><a href="https://k1minseong.github.io/hisoap_sub4/">나만의 비누 만들기</a></p>
               <img src="images/factory01.png" alt="나만의 비누">
             </div><!--box1-->
             <div class="box2 fb" data-aos="fade-up" data-aos-duration="2000" >
               <h4>Workshop Reservation</h4>
-              <p><a href="#none">희솝 공방 예약</a></p>
+              <p><a href="https://k1minseong.github.io/hisoap_sub4/">희솝 공방 예약</a></p>
               <img src="images/factory02.png" alt="공방">
             </div><!--box2-->
             <div class="box3 fb" data-aos="fade-up" data-aos-duration="3000">
               <h4>Scent of the month</h4>
-              <p><a href="#none">이달의 향기</a></p>
+              <p><a href="https://k1minseong.github.io/hisoap_sub4/">이달의 향기</a></p>
               <img src="images/factory03.png" alt="이달의향기">
             </div><!--box3-->
           </div><!--factorybox-->
