--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           </div>
         </div><!--header_inner-->
       </div><!--header-->
-          <div class="visual"><img src="images/visual.jpg" alt="메인비주얼"></div><!--visual-->
+          <div class="visual"><video width="100%" src="images/main_video.mp4" autoplay muted loop></video></div><!--visual-->
       <div class="content">
         <div class="about">
           <!-- <img src="images/about_us.png" alt="회사소개"> -->
