--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=1400">
-    <title>main</title>
+    <title>HISOAP</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="css/swiper.css" rel="stylesheet" type="text/css"><!-- 수정X -->
 	  <link href="css/slidebanner.css" rel="stylesheet" type="text/css"><!--디자인에 맞게 수정-->
